# dbspec

./: .envrc.example  Cargo.toml  README.md
.devcontainer/: Dockerfile  docker-compose.yml
.devcontainer/seeds/: mysql-seed.sql  postgres-seed.sql  postgres.sql
.github/workflows/: publish.yml
src/: db_introspect.rs  faking.rs  lib.rs  main.rs
src/db_introspect/: mysql.rs  pg.rs
