[package]
name = "dbspec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
convert_case = "0.6.0"
itertools = "0.12.1"
rayon = "1.10.0"
sqlx = { version = "0.7.4", features = [
    "mysql",
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.37.0", features = ["full"] }
fakeit = "1.2.0"
rand = "0.8.5"
