[package]
name = "dbspec"
version = "0.1.0"
edition = "2021"
description = "Database introspection and model generation"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["mysql", "postgres"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
fake = ["fakeit"]

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio-rustls",
] }
tokio = { version = "1.37.0", features = ["full"] }
fakeit = { version = "1.2.0", default-features = false, optional = true }
rand = "0.8.5"
